--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul class="deck">
         </ul>
     </div>
-
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="js/app.js"></script>
 </body>
 
