--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><i class="fa fa-star"></i></li>
             </ul>
 
-            <span class="moves">3</span> Moves
+            <span class="moves">0</span> Move(s)
 
             <div class="restart">
                 <i class="fa fa-repeat"></i>
