Add a basic congrats message with function for checking for match

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             </div>
         </section>
 
+        <section class="congrats hidden">
+            Congratulations
+        </section>
+
         <ul class="deck">
         </ul>
     </div>
