Move congrats to html, add reset to modal.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
         </ul>
     </div>
 
-    <div id="congrats">
+    <div id="congrats" class="hidden">
+        <h2>Congrats for Winning!</h2>
+        <section class="winning-score-panel">
+            Your Score:
+            <ul class="stars">
+            </ul>
+            in <span class="moves">0</span> Move(s)
+            <p>Play Again?
+                <a href="#" onclick="reset();" rel="modal:close"><i class="fa fa-repeat"></i></a>
+            </p>
+        </section>
     </div>
 
 
