Add timer functionality and display.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="stars">
             </ul>
 
-            <span class="moves">0</span> Move(s)
+            <span class="moves">0</span> Move(s) | Time Played: <span class="time"></span>
 
             <div class="restart">
                 <i class="fa fa-repeat"></i>
@@ -33,13 +33,13 @@
         </ul>
     </div>
 
-    <div id="congrats" class="hidden">
+    <div class="congrats hidden">
         <h2>Congrats for Winning!</h2>
         <section class="winning-score-panel">
             Your Score:
             <ul class="stars">
             </ul>
-            in <span class="moves">0</span> Move(s)
+            in <span class="moves">0</span> Move(s) and Total Time Played: <span class="time"></span>
             <p>Play Again?
                 <a href="#" onclick="reset();" rel="modal:close"><i class="fa fa-repeat"></i></a>
             </p>
