--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
             in <span class="moves">0</span> Move(s) and Total Time Played: <span class="time"></span>
             <p>Play Again?
-                <a href="#" onclick="reset();" rel="modal:close"><i class="fa fa-repeat"></i></a>
+                <a href="#" onclick="reset();" ontouchstart="reset();" rel="modal:close"><i class="fa fa-repeat"></i></a>
             </p>
         </section>
     </div>
