Added opengraph meta data for facebook and others to use.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>Matching Game</title>
-    <meta name="description" content="">
+    <meta name="description" content="Memory Card Matching Game.">
+    <meta property="og:title" content="Matching Game" />
+    <meta property="og:image" content="http://matthewrhone.com/apps/memory/img/memory.png">
+    <meta property="og:description" content="Memory Card Matching Game." />
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
